--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -54,9 +54,13 @@ jobs:
         sqlite-utils optimize ash-db/abstracts.db
         cd ash-db
         git remote prune origin
+        # git lfs track "*.db" # or maybe via a release?
         git add abstracts.db
         git commit --amend --no-edit
         git push --force
+    - name: Current db info
+      run: |-
+        cd ash-db
         echo "Current db contents, head:"
         sqlite-utils abstracts.db "SELECT * from abstracts ORDER BY start_url_page_num DESC LIMIT 10"
         echo ""
@@ -68,3 +72,7 @@ jobs:
         echo ""
         echo "Current start url page number:"
         sqlite-utils abstracts.db "SELECT MAX(start_url_page_num) from abstracts"
+      - name: Upload to releases
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ash-db/abstracts.db
