--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -75,4 +75,6 @@ jobs:
     - name: Upload to releases
       uses: softprops/action-gh-release@v1
       with:
+        repository: cbeauhilton/ash-db
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_PUSH }}
         files: ash-db/abstracts.db
