--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -13,12 +13,6 @@ jobs:
     steps:
     - name: Checkout ash-abstracts
       uses: actions/checkout@v2
-    - name: Checkout ash-db
-      uses: actions/checkout@v2
-      with:
-        repository: cbeauhilton/ash-db
-        path: scrape_ash/scrape_ash/ash-db
-        token: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_PUSH }}
     - name: Checkout ash-files
       uses: actions/checkout@v2
       with:
@@ -51,7 +45,7 @@ jobs:
         scrapy crawl abstracts
         cp data/doi_json/*.json ash-files/doi_json/
         cd ash-files
-        git config --global user.name "DOI bot"       
+        git config --global user.name "abstract bot"       
         git config --global user.email "actions@users.noreply.github.com"
         git add -A
         timestamp=$(date -u)
