--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -47,7 +47,7 @@ jobs:
         find ash-files/doi_json -maxdepth 1 -type f -name \*.json -exec cat {} + | jq -s . > db.json
         sqlite-utils insert ash-db/abstracts.db abstracts db.json --pk=doi
         sqlite-utils enable-counts ash-db/abstracts.db
-        sqlite-utils enable-fts ash-db/abstracts.db abstracts article_title abstract_text author_affiliations
+        # sqlite-utils enable-fts ash-db/abstracts.db abstracts article_title abstract_text author_affiliations
         sqlite-utils optimize ash-db/abstracts.db
         cd ash-db
         timestamp=$(date -u)
