--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -49,16 +49,7 @@ jobs:
         sqlite-utils enable-counts ash-db/abstracts.db
         sqlite-utils enable-fts ash-db/abstracts.db abstracts article_title abstract_text author_affiliations
         sqlite-utils optimize ash-db/abstracts.db
-        cd ash-db
-        timestamp=$(date -u)
-        echo "Release last updated: ${timestamp} . " > README.md
-        echo "" >> README.md
-        echo "Direct download available [here](https://github.com/cbeauhilton/ash-db/releases/download/newDB/abstracts.db)." >> README.md
-        git remote prune origin
-        git add README.md
-        git commit --amend --no-edit
-        git push --force
-    - name: Current db info
+    - name: Echo current db info
       run: |-
         cd ash-db
         echo "Current db contents, head:"
@@ -72,10 +63,21 @@ jobs:
         echo ""
         echo "Current start url page number:"
         sqlite-utils abstracts.db "SELECT MAX(start_url_page_num) from abstracts"
+    - name: Update readme
+      run: |-
+        cd ash-db
+        timestamp=$(date -u)
+        echo "Release last updated: ${timestamp} . " > README.md
+        echo "" >> README.md
+        echo "Direct download available [here](https://github.com/cbeauhilton/ash-db/releases/download/newDB/abstracts.db)." >> README.md
+        git remote prune origin
+        git add README.md
+        git commit --amend --no-edit
+        git push --force
     - name: Upload to releases
       uses: softprops/action-gh-release@v1
       with:
         repository: cbeauhilton/ash-db
         token: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_PUSH }}
-        tag_name: "newDB"
+        tag_name: "database update"
         files: ash-db/abstracts.db
