--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,12 +30,12 @@ jobs:
         pip install datasette sqlite-utils
         datasette install datasette-publish-vercel
     - name: Download database
-      run: curl --fail -OL https://github.com/cbeauhilton/ash-db/releases/download/newDB/abstracts.db
+      run: curl --fail -OL https://github.com/cbeauhilton/ash-db/releases/download/database/abstracts.db
     - name: Soundness check
       run: |-
         datasette abstracts.db --get / | grep "abstracts"
-    - name: Replace metadata.json
-      run: cat remote-metadata.json > metadata.json
+    # - name: Replace metadata.json
+    #   run: cat remote-metadata.json > metadata.json
     - name: Deploy Datasette using Vercel
       env:
         NOW_TOKEN: ${{ secrets.NOW_TOKEN }}
