space in build workflow, convert iso3 to iso2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+iso3166
 datasette
 dateparser
 datasette-cluster-map
@@ -58,6 +59,7 @@ queuelib
 regex 
 requests
 requests-html 
+reverse-geocode
 Scrapy 
 service-identity 
 shellingham
