--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,26 @@
-iso3166
-datasette
-dateparser
+CacheControl
+cachy
+cleo
 datasette-cluster-map
-datasette-leaflet
-deta
+dateparser
 html5lib
-httpcore
-httpx
-hupper
-itemadapter 
-itemloaders 
-itsdangerous
-janus
-jeepney
-Jinja2
-jmespath 
-jsonlines 
+iso3166
+isort
 keyring
-lockfile
-lxml 
-MarkupSafe
-mergedeep
-more-itertools 
-msgpack
-mypy-extensions 
-numpy 
-packaging 
-pandas 
-parse 
-parsel 
-pastel
-pathspec 
+openpyxl
+pandas
 pexpect
-Pint
 pkginfo
-platformdirs
-pluggy 
-poetry-core
-priority 
-Protego 
-ptyprocess
-py 
-pyasn1 
-pyasn1-modules 
-pycparser
-PyDispatcher 
-pyee 
-pylev
-pyOpenSSL 
-pyparsing
-pyppeteer 
-pyquery 
+priority
 PySocks
-pytest 
-pytz 
-PyYAML
-queuelib 
-regex 
-requests
-requests-html 
+pytest
+pytzdata
+requests-html
+requests-toolbelt
 reverse-geocode
-Scrapy 
-service-identity 
+Scrapy
 shellingham
-six
-sniffio
-soupsieve 
 sqlite-utils
 stem
-tabulate
-tenacity
-urllib3
-uvicorn
-w3lib 
-wcwidth 
-webencodings
-websockets 
+tomlkit
+xlrd
