--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -40,20 +40,23 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install sqlite-utils
-    - name: Make database
+    - name: Make databases
       run: |-
         git config --global user.name "db bot"       
         git config --global user.email "actions@users.noreply.github.com"
         find ash-files/doi_json -maxdepth 1 -type f -name \*.json -exec cat {} + | jq -s . > db.json
         sqlite-utils insert ash-db/abstracts.db abstracts db.json --pk=doi --alter
+        sqlite-utils enable-counts ash-db/abstracts_full.db
+        sqlite-utils enable-fts ash-db/abstracts_full.db abstracts article_title abstract_text author_names author_affiliations
+        sqlite-utils optimize ash-db/abstracts_full.db
+        jq 'del(.abstract_text)' db.json > db.json
+        sqlite-utils insert ash-db/abstracts.db abstracts db.json --pk=doi --alter
         sqlite-utils enable-counts ash-db/abstracts.db
-        sqlite-utils enable-fts ash-db/abstracts.db abstracts article_title abstract_text author_names author_affiliations
+        sqlite-utils enable-fts ash-db/abstracts.db abstracts article_title author_names author_affiliations
         sqlite-utils optimize ash-db/abstracts.db
     - name: Echo current db info
       run: |-
         cd ash-db
-        echo "Current db contents, head:"
-        sqlite-utils abstracts.db "SELECT * from abstracts ORDER BY start_url_page_num DESC LIMIT 10"
         echo ""
         echo "Current number of items in db:"
         sqlite-utils abstracts.db "SELECT count(*) from abstracts"
@@ -69,7 +72,7 @@ jobs:
         timestamp=$(date -u)
         echo "Release last updated: ${timestamp} . " > README.md
         echo "" >> README.md
-        echo "Direct download available [here](https://github.com/cbeauhilton/ash-db/releases/download/database/abstracts.db)." >> README.md
+        echo "Available [here](https://github.com/cbeauhilton/ash-db/releases)." >> README.md
         git remote prune origin
         git add README.md
         git commit --amend --no-edit
@@ -80,4 +83,6 @@ jobs:
         repository: cbeauhilton/ash-db
         token: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_PUSH }}
         tag_name: "database"
-        files: ash-db/abstracts.db
+        files: |
+          ash-db/abstracts.db
+          ash-db/abstracts_full.db
