--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -40,15 +40,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install sqlite-utils
-    - name: Make databases
+    - name: Make db json
       run: |-
         git config --global user.name "db bot"       
         git config --global user.email "actions@users.noreply.github.com"
         find ash-files/doi_json -maxdepth 1 -type f -name \*.json -exec cat {} + | jq -s . > db.json
+    - name: Make full db
+      run: |-
         sqlite-utils insert ash-db/abstracts_full.db abstracts db.json --pk=doi --alter
         sqlite-utils enable-counts ash-db/abstracts_full.db
         sqlite-utils enable-fts ash-db/abstracts_full.db abstracts article_title abstract_text author_names author_affiliations
         sqlite-utils optimize ash-db/abstracts_full.db
+    - name: Make db without abstract text
+      run: |-
         jq 'map(del(.abstract_text))' db.json > db.json
         sqlite-utils insert ash-db/abstracts.db abstracts db.json --pk=doi --alter
         sqlite-utils enable-counts ash-db/abstracts.db
