--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -51,8 +51,8 @@ jobs:
         sqlite-utils optimize ash-db/abstracts_full.db
     - name: Make db without abstract text
       run: |-
-        jq 'del(.[] .abstract_text)' db.json > db.json
-        sqlite-utils insert ash-db/abstracts.db abstracts db.json --pk=doi --alter
+        jq 'del(.[] .abstract_text)' db.json > db1.json
+        sqlite-utils insert ash-db/abstracts.db abstracts db1.json --pk=doi --alter
         sqlite-utils enable-counts ash-db/abstracts.db
         sqlite-utils enable-fts ash-db/abstracts.db abstracts article_title author_names author_affiliations
         sqlite-utils optimize ash-db/abstracts.db
