--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -75,6 +75,8 @@ jobs:
         echo "Release last updated: ${timestamp} . " > README.md
         echo "" >> README.md
         echo "Available [here](https://github.com/cbeauhilton/ash-db/releases)." >> README.md
+        du -h abstracts.db >> README.md
+        du -h abstracts_full.db >> README.md
         git config --global user.name "db bot"       
         git config --global user.email "actions@users.noreply.github.com"
         git remote prune origin
