--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -81,12 +81,18 @@ jobs:
         du -h abstracts.db >> README.md
         echo "" >> README.md
         du -h abstracts_full.db >> README.md
+        echo "" >> README.md
+        echo "Current number of items in db:" >> README.md
+        sqlite-utils abstracts_full.db "SELECT count(*) from abstracts" >> README.md
+        echo "" >> README.md
+        echo "Current number of scraped items in db:" >> README.md
+        sqlite-utils abstracts_full.db "SELECT count(*) from abstracts WHERE is_scraped = 1" >> README.md
+        cat README.md
         git config --global user.name "db bot"       
         git config --global user.email "actions@users.noreply.github.com"
-        git remote prune origin
         git add README.md
-        git commit --amend --no-edit
-        git push --force
+        git commit -m "update: ${timestamp}. "
+        git push 
     - name: Upload to releases
       uses: softprops/action-gh-release@v1
       with:
