--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -43,6 +43,11 @@ jobs:
         mkdir -p data/doi_json
         cat gha_settings.py > settings.py
         scrapy crawl abstracts
+    - name: Commit scraped files
+      if: |-
+        contains(github.event.head_commit.message, 'ABSTRACT') || (github.event_name == 'schedule')
+      run: |-
+        cd scrape_ash/scrape_ash/
         cp data/doi_json/*.json ash-files/doi_json/
         cd ash-files
         git config --global user.name "abstract bot"       
