--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -31,6 +31,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r scraping-requirements.txt
+    - name: Download databases
+      run: |
+        cd scrape_ash/scrape_ash/data/
+        curl --fail -OL https://github.com/cbeauhilton/ash-db/releases/download/database/urls.db
+        curl --fail -OL https://github.com/cbeauhilton/ash-db/releases/download/database/abstracts.db
+        continue-on-error: true
     - name: Scrape DOI from beginning
       if: |-
         contains(github.event.head_commit.message, 'CLEAN_DOI')
@@ -65,3 +71,12 @@ jobs:
         timestamp=$(date -u)
         git commit --allow-empty -m "Latest data: ${timestamp}"
         git push
+    - name: Upload to releases
+      uses: softprops/action-gh-release@v1
+      with:
+        repository: cbeauhilton/ash-db
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_PUSH }}
+        tag_name: "database"
+        files: |
+          scrape_ash/scrape_ash/abstracts.db
+          scrape_ash/scrape_ash/urls.db
