--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -1,6 +1,9 @@
 name: Scrape DOI
 
 on:
+  push:
+    branches:
+    - main
   schedule:
     - cron: '12 3 * * 0'
 
@@ -31,38 +34,30 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r scraping-requirements.txt
+    - name: Make sure data directories exist
+      run: |
+        cd scrape_ash/scrape_ash/
+        mkdir -p data
+        mkdir -p data/doi_json
+        mkdir -p ash-files/doi_json
     - name: Download databases
       run: |
         cd scrape_ash/scrape_ash/data/
         curl --fail -OL https://github.com/cbeauhilton/ash-db/releases/download/database/urls.db
-        curl --fail -OL https://github.com/cbeauhilton/ash-db/releases/download/database/abstracts.db
         continue-on-error: true
-    - name: Scrape DOI from beginning
-      if: |-
-        contains(github.event.head_commit.message, 'CLEAN_DOI')
-      run: |-
-        echo " " > .gitignore
-        cd scrape_ash/scrape_ash/
-        mkdir -p ash-files/doi_json
-        cat gha_settings.py > settings.py
-        scrapy crawl dois
-        cp data/doi_json/*.json ash-files/doi_json/
-        cd ash-files
-        git config --global user.name "DOI bot"       
-        git config --global user.email "actions@users.noreply.github.com"
-        git add -A
-        timestamp=$(date -u)
-        git commit --allow-empty  -m "Latest data: ${timestamp}"
-        git push
     - name: Scrape DOI
-      if: |-
-        !contains(github.event.head_commit.message, 'CLEAN_DOI') && contains(github.event.head_commit.message, 'DOI') || github.event_name == 'schedule'
+      id: scrape
+      if: contains(github.event.head_commit.message, 'DOI') || github.event_name == 'schedule'
+      run: |-
+        cd scrape_ash/scrape_ash/
+        echo "CLOSESPIDER_PAGECOUNT = 200" >> settings.py
+        echo "CLOSESPIDER_ITEMCOUNT = 300" >> settings.py
+        scrapy crawl dois
+    - name: Commit scraped files
+      if: steps.scrape.outcome == 'success'
       run: |-
         echo " " > .gitignore
         cd scrape_ash/scrape_ash/
-        cat gha_settings.py > settings.py
-        scrapy crawl dois
-        mkdir -p ash-files/doi_json
         cp data/doi_json/*.json ash-files/doi_json/
         cd ash-files
         git config --global user.name "DOI bot"       
@@ -72,11 +67,11 @@ jobs:
         git commit --allow-empty -m "Latest data: ${timestamp}"
         git push
     - name: Upload to releases
+      if: steps.scrape.outcome == 'success'
       uses: softprops/action-gh-release@v1
       with:
         repository: cbeauhilton/ash-db
         token: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_PUSH }}
         tag_name: "database"
         files: |
-          scrape_ash/scrape_ash/abstracts.db
           scrape_ash/scrape_ash/urls.db
