--- a/.github/workflows/wbhx.yml
+++ b/.github/workflows/wbhx.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches:
     - main
+  schedule:
+    - cron: '12 2 * * 1'
 
 jobs:
   build:
+    if: contains(github.event.head_commit.message, 'wbhx') || github.event_name == 'schedule'
     runs-on: ubuntu-latest
     steps:
     - name: Check out repo
