move logic for workflow to more sane place.

--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'ABSTRACT') || (github.event_name == 'schedule')
     steps:
     - name: Checkout this repo
       uses: actions/checkout@v2
@@ -40,20 +41,18 @@ jobs:
         mkdir -p data
         mkdir -p data/doi_json
         mkdir -p ash-files/doi_json
-    - name: Download abstract database
-      run: |-
-        cd scrape_ash/scrape_ash/data/
-        curl --fail -O https://github.com/cbeauhilton/ash-db/releases/download/database/abstracts.db
-      continue-on-error: true
     - name: Download url database
       run: |-
         cd scrape_ash/scrape_ash/data/
         curl --fail -O https://github.com/cbeauhilton/ash-db/releases/download/database/urls.db
       continue-on-error: true
+    - name: Download abstract database
+      run: |-
+        cd scrape_ash/scrape_ash/data/
+        curl --fail -O https://github.com/cbeauhilton/ash-db/releases/download/database/abstracts.db
+      continue-on-error: true
     - name: Scrape abstracts
       id: scrape
-      if: |-
-        contains(github.event.head_commit.message, 'ABSTRACT') || (github.event_name == 'schedule')
       run: |-
         cd scrape_ash/scrape_ash/
         echo "CLOSESPIDER_PAGECOUNT = 200" >> settings.py
