--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -45,7 +45,6 @@ jobs:
       run: |-
         cd scrape_ash/scrape_ash/data/
         curl --fail -O https://github.com/cbeauhilton/ash-db/releases/download/database/urls.db
-      continue-on-error: true
     - name: Download abstract database
       run: |-
         cd scrape_ash/scrape_ash/data/
@@ -53,6 +52,7 @@ jobs:
       continue-on-error: true
     - name: Scrape abstracts
       id: scrape
+      if: steps.dl.outcome == 'success'
       run: |-
         cd scrape_ash/scrape_ash/
         echo "CLOSESPIDER_PAGECOUNT = 200" >> settings.py
