--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,15 @@ jobs:
         datasette install datasette-publish-vercel
     - name: Download database
       run: curl --fail -OL https://github.com/cbeauhilton/ash-db/releases/download/database/abstracts.db
+    - name: Shrink db for Vercel
+      run: |-
+        sqlite-utils ash-db/abstracts.db "SELECT doi, article_title, article_date, session_type, topics, author_names, author_affiliations, first_author_latitude, first_author_longitude from abstracts WHERE is_scraped=1 LIMIT 40000" | sqlite-utils insert ash-db/abstracts_small.db abstracts - --pk=doi
+        sqlite-utils enable-counts ash-db/abstracts_small.db
+        sqlite-utils enable-fts ash-db/abstracts_small.db abstracts article_title author_names author_affiliations
+        sqlite-utils optimize ash-db/abstracts_small.db
     - name: Soundness check
       run: |-
-        datasette abstracts.db --get / | grep "abstracts"
+        datasette abstracts_small.db --get / | grep "abstracts"
     - name: Replace metadata.json
       # Vercel does not yet support Python >3.6, which is req by remote-metadata
       run: cat remote-metadata.yaml > metadata.yaml
@@ -41,7 +47,7 @@ jobs:
       env:
         NOW_TOKEN: ${{ secrets.NOW_TOKEN }}
       run: |-
-        datasette publish vercel abstracts.db \
+        datasette publish vercel abstracts_small.db \
           --setting default_page_size 10 \
           --token $NOW_TOKEN \
           --project ash-abstracts \
